--- a/backend/render.yaml
+++ b/backend/render.yaml
@@ -3,6 +3,7 @@ services:
     name: labflow-clinic-backend
     env: node
     plan: free
+    rootDir: backend
     buildCommand: npm install
     startCommand: npm start
     envVars:
