--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "build:netlify": "npm run build:production",
     "lint": "eslint .",
     "preview": "vite preview",
+    "start": "cd backend && npm start",
     "electron": "electron .",
     "electron:dev": "concurrently \"npm run dev\" \"cd backend && npm start\"",
     "electron:start": "wait-on http://localhost:8080 http://localhost:3001/api/health && electron .",
