Force redeploy - ensure latest changes

--- a/.env.example
+++ b/.env.example
@@ -3,5 +3,5 @@ VITE_API_URL=http://localhost:3002
 VITE_APP_ENV=development
 
 # Production Environment (for Netlify)
-# VITE_API_URL=https://your-render-app.onrender.com
+# VITE_API_URL=https://labflow-clinic-backend-skzx.onrender.com
 # VITE_APP_ENV=production
