--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "build:netlify": "npm run build:production",
     "lint": "eslint .",
     "preview": "vite preview",
+    "postinstall": "cd backend && npm install",
     "start": "cd backend && npm start",
     "electron": "electron .",
     "electron:dev": "concurrently \"npm run dev\" \"cd backend && npm start\"",
