--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
-VITE_API_URL=http://localhost:3001
-VITE_BACKEND_URL=http://localhost:3001
+VITE_API_URL=https://labflow-clinic-backend-skzx.onrender.com
+VITE_BACKEND_URL=https://labflow-clinic-backend-skzx.onrender.com
 NODE_ENV=development
 PORT=8080
 BACKEND_PORT=3001
