--- a/netlify.toml
+++ b/netlify.toml
@@ -11,13 +11,13 @@
   status = 200
 
 [context.production.environment]
-  VITE_API_URL = "https://your-render-app.onrender.com"
+  VITE_API_URL = "https://labflow-clinic-backend-skzx.onrender.com"
   VITE_APP_ENV = "production"
 
 [context.deploy-preview.environment]
-  VITE_API_URL = "https://your-render-app.onrender.com"
+  VITE_API_URL = "https://labflow-clinic-backend-skzx.onrender.com"
   VITE_APP_ENV = "preview"
 
 [context.branch-deploy.environment]
-  VITE_API_URL = "https://your-render-app.onrender.com"
+  VITE_API_URL = "https://labflow-clinic-backend-skzx.onrender.com"
   VITE_APP_ENV = "development"
